<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/settings_image"
        android:layout_width="250dp"
        android:layout_height="270dp"
        android:layout_above="@+id/settings_txt_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <Button
        android:id="@+id/change_dp_btn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="72dp"
        android:background="@android:color/white"
        android:text="@string/change_picture"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/change_status_btn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_above="@+id/change_dp_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="14dp"
        android:background="@color/colorAccent"
        android:text="@string/change_status"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/settings_txt_view"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/status"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="5dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_status_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="88dp"
        android:text="@string/hi_i_m_using_bmg_app"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</RelativeLayout>